--- a/src/Resources/public/scss/contao/teaserbox.scss
+++ b/src/Resources/public/scss/contao/teaserbox.scss
@@ -7,7 +7,7 @@
   }
 
   .inside {
-    box-shadow: 3px 3px 6px rgba(0,0,0,.16);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
     border-radius: $border-radius;
     overflow: hidden;
   }
