update styling, add images

--- a/src/Resources/ContaoCoreBundle/views/Error/layout.html.twig
+++ b/src/Resources/ContaoCoreBundle/views/Error/layout.html.twig
@@ -22,6 +22,7 @@
 
                 body {
                     font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto;
+                    background: #f2f2f2;
                     width: 100%;
                     min-height: 100vh;
                     margin: 0;
@@ -29,13 +30,6 @@
 
                 #content, .wrap {
                     min-height: 100vh;
-                }
-
-                #content {
-                    background-image:url(/bundles/contaothemesnetzeroonetheme/img/bubbles.svg);
-                    background-position: center;
-                    background-repeat: no-repeat;
-                    background-size: auto 80%;
                 }
 
                 .error {
