--- a/src/Resources/public/css/maintenance_mode.css
+++ b/src/Resources/public/css/maintenance_mode.css
@@ -1,23 +1,3 @@
 /*
- * Colour Scheme DAY
+ * Overwrite CSS for maintenance mode
  */
-
-body {
-    background: transparent linear-gradient(99deg, #f6d365 0%, #ff8562 100%) 0% 0% no-repeat padding-box;
-}
-
-/*
- * Colour Scheme EARTH
- */
-
-/*body {
-    background: transparent linear-gradient(99deg, #96C93D 0%, #00B09B 100%) 0% 0% no-repeat padding-box;
-}*/
-
-/*
- * Colour Scheme NIGHT
- */
-
-/*body {
-    background: transparent linear-gradient(99deg, #AA4B6B 0%, #3B8D99 100%) 0% 0% no-repeat padding-box;
-}*/
