--- a/src/Resources/public/scss/_convert.scss
+++ b/src/Resources/public/scss/_convert.scss
@@ -84,10 +84,10 @@ footer {
   overflow: hidden;
 
   a, a:visited {
-    color: $primary-color;
+    color: $light-color;
 
     &:hover {
-      color: $link-color-dark;
+      color: $primary-color;
     }
   }
 
@@ -258,6 +258,11 @@ ul {
   }
 }
 
+.shadow-image img {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 6px;
+}
+
 /* Intro */
 
 .intro {
@@ -302,21 +307,21 @@ ul {
         width: calc(100% + 20px);
         height: calc(100% + 10px);
         position: absolute;
-        top: 0px;
+        top: 0;
         left: -10px;
         background-position: center;
         background-size: cover;
-        filter: blur(5px);
         margin: -5px -5px -10px -5px;
         overflow: hidden;
         display: block;
+        filter: blur(2px);
 
         &:after {
           content: "";
           position: absolute;
           width: 100%;
           height: 100%;
-          background: rgba(0, 0, 0, 0.3);
+          background: rgba(0, 0, 0, 0.2);
         }
       }
     }
