--- a/src/Resources/public/scss/_variables.scss
+++ b/src/Resources/public/scss/_variables.scss
@@ -9,7 +9,7 @@ $rtl: false !default;
 
 // Core colors
 $primary-color: #F37920 !default;
-$primary-color-dark: darken($primary-color, 3%) !default;
+$primary-color-dark: darken($primary-color, 8%) !default;
 $primary-color-light: lighten($primary-color, 3%) !default;
 $secondary-color: lighten($primary-color, 37.5%) !default;
 $secondary-color-dark: darken($secondary-color, 3%) !default;
@@ -45,7 +45,7 @@ $link-color-light: lighten($link-color, 10%) !default;
 
 // Fonts
 // Credit: https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
-$base-font-family: "Roboto", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto !default;
+$base-font-family: "Roboto", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI" !default;
 $mono-font-family: "SF Mono", "Segoe UI Mono", "Roboto Mono", Menlo, Courier, monospace !default;
 $fallback-font-family: "Roboto", "Helvetica Neue", sans-serif !default;
 $cjk-zh-hans-font-family: $base-font-family, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", $fallback-font-family !default;
