--- a/src/Resources/public/scss/contao/teaserbox.scss
+++ b/src/Resources/public/scss/contao/teaserbox.scss
@@ -10,6 +10,7 @@
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
     border-radius: $border-radius;
     overflow: hidden;
+    background: $light-color;
   }
 
   img {
