add sql files and styling

--- a/src/Resources/public/scss/_custom_variables.scss
+++ b/src/Resources/public/scss/_custom_variables.scss
@@ -12,7 +12,7 @@
 /*    CONVERT Theme Variables    */
 /* ============================= */
 
-//$body-font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto;
+//$body-font-family: "Roboto", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI";
 
 //$primary-color: #F37920;
 
