update styling and sql files

--- a/src/Resources/public/scss/_convert.scss
+++ b/src/Resources/public/scss/_convert.scss
@@ -46,7 +46,7 @@ body:not(.home) header {
     width: 100%;
 
     &:hover {
-      color: #fff;
+      color: $light-color;
       background: $primary-color-dark;
     }
   }
