update sql files, add dark mode

--- a/src/Resources/public/scss/_custom_variables.scss
+++ b/src/Resources/public/scss/_custom_variables.scss
@@ -9,6 +9,12 @@
  */
 
 /* ============================= */
+/*          Dark Mode            */
+/* ============================= */
+
+@import '/colour_schemes/dark_mode';
+
+/* ============================= */
 /*    CONVERT Theme Variables    */
 /* ============================= */
 
