--- a/src/Resources/public/scss/_convert.scss
+++ b/src/Resources/public/scss/_convert.scss
@@ -340,8 +340,15 @@ ul {
           width: 100%;
           height: 100%;
           background: rgba(0, 0, 0, 0.2);
+          top: 0;
+          left: 0;
         }
       }
+    }
+
+    img {
+      min-height: 100vh;
+      max-width: inherit;
     }
 
     .inside {
