--- a/src/Resources/public/scss/_convert.scss
+++ b/src/Resources/public/scss/_convert.scss
@@ -284,12 +284,54 @@ ul {
 /* Intro */
 
 .intro {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  /*&.right-image {
+    .ce_ct_teaserBox, .ce_image {
+      width: inherit;
+    }
+
+    .ce_image {
+      padding-left: 50px;
+    }
+  }
+
+  &.left-image {
+    flex-direction: row-reverse;
+
+    .ce_ct_teaserBox, .ce_image {
+      width: inherit;
+    }
+
+    .ce_image {
+      padding-right: 50px;
+    }
+  }*/
+
+  > .ce_image {
+    width: 100%;
+    padding-bottom: 50px;
+
+    &:first-child {
+      padding: 50px 0 20px;
+
+      + .ce_ct_teaserBox {
+        padding-top: 0;
+      }
+    }
+  }
+
   .ce_ct_teaserBox {
     width: 100%;
-    min-height: 100vh;
+    //min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 50px 0;
 
     &:after{
       content:'';
@@ -299,6 +341,10 @@ ul {
 
     .btn {
       box-shadow: 3px 3px 6px rgba(0,0,0,.5);
+    }
+
+    h1:first-child {
+      margin-top: 0;
     }
 
     h1 a {
@@ -331,16 +377,6 @@ ul {
         overflow: hidden;
         display: block;
         filter: blur(2px);
-
-        &:after {
-          content: "";
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          background: rgba(0, 0, 0, 0.2);
-          top: 0;
-          left: 0;
-        }
       }
     }
 
@@ -348,6 +384,20 @@ ul {
       min-height: 100vh;
       max-width: inherit;
       min-width: 100vw;
+    }
+
+    .image_container {
+      position: relative;
+
+      &:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.2);
+        top: 0;
+        left: 0;
+      }
     }
 
     .inside {
@@ -366,6 +416,18 @@ ul {
       margin-top: 40px;
     }
   }
+}
+
+@media (max-width: 1700px) {
+
+  .intro .ce_ct_teaserBox .image_container {
+    margin: 0 !important;
+  }
+
+  .mod_article.fullwidth.intro {
+    padding: 100px 0;
+  }
+
 }
 
 @media (max-width: $article-width) {
@@ -411,6 +473,18 @@ ul {
     p {
       font-size: 24px;
     }
+  }
+
+  .intro>.ce_image:first-child {
+    padding: 150px 0 0;
+
+    + .ce_ct_teaserBox .inside {
+      padding: 30px 20px 30px;
+    }
+  }
+
+  .mod_article.fullwidth.intro {
+    padding: 0;
   }
 
 }
