--- a/src/Resources/public/scss/_convert.scss
+++ b/src/Resources/public/scss/_convert.scss
@@ -46,8 +46,8 @@ body:not(.home) header {
     width: 100%;
 
     &:hover {
-      color: $light-color;
-      background: $primary-color-dark;
+      color: $button-color-hover;
+      background: $button-background-hover;
     }
   }
 
@@ -277,7 +277,7 @@ ul {
 }
 
 .shadow-image img {
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+  filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.3));
   border-radius: 6px;
 }
 
@@ -315,6 +315,7 @@ ul {
   > .ce_image {
     width: 100%;
     padding-bottom: 50px;
+    text-align: center;
 
     &:first-child {
       padding: 50px 0 20px;
