--- a/src/Resources/public/scss/_variables.scss
+++ b/src/Resources/public/scss/_variables.scss
@@ -123,5 +123,9 @@ $footer-background_1: #58595B !default;
 $footer-color-1: #F2F2F2 !default;
 $article-width: 1180px !default;
 $article-padding: 60px 20px !default;
+$button-background: $primary-color !default;
+$button-color: $light-color !default;
+$button-background-hover: $primary-color-dark !default;
+$button-color-hover: $button-color !default;
 
 @import '../../../../files/convert/scss/_custom_variables.scss';
