--- a/src/Resources/public/scss/contao/buttons.scss
+++ b/src/Resources/public/scss/contao/buttons.scss
@@ -3,7 +3,7 @@ div.btn {
 
   a {
     padding: 22px 20px;
-    color: $light-color;
+    color: $button-color;
     display: block;
   }
 }
@@ -17,22 +17,32 @@ div.btn {
   white-space: inherit;
   line-height: 1.2;
   height: inherit;
-  background: $primary-color;
-  color: $light-color;
+  background: $button-background;
+  color: $button-color;
   transition: background .2s;
   -webkit-transition: background .2s;
   font-size: 22px;
 
   &:hover {
-    background: $primary-color-dark;
-    color: $light-color;
+    background: $button-background-hover;
+    color: $button-color-hover;
+  }
+
+  &.btn-primary {
+    background: $button-background;
+    color: $button-color;
+
+    &:hover {
+      background: $button-background-hover;
+      color: $button-color-hover;
+    }
   }
 
   &:not(.btn-primary):not(.btn-link):not(.btn-success):not(.btn-error):visited {
-    color: $light-color;
+    color: $button-color;
 
     &:hover {
-      color: $light-color;
+      color: $button-color;
     }
   }
 
@@ -50,7 +60,7 @@ div.btn {
   }
 
   &.btn-link:hover {
-    color: $light-color;
+    color: $button-color;
   }
 }
 
