--- a/src/Resources/public/scss/_custom_variables.scss
+++ b/src/Resources/public/scss/_custom_variables.scss
@@ -36,3 +36,7 @@
 //$article-padding: 60px 20px;
 //$border-radius: 6px;
 
+//$button-background: $primary-color;
+//$button-color: $light-color;
+//$button-background-hover: $primary-color-dark;
+//$button-color-hover: $button-color;
