--- a/src/Resources/public/scss/_custom_variables.scss
+++ b/src/Resources/public/scss/_custom_variables.scss
@@ -9,6 +9,12 @@
  */
 
 /* ============================= */
+/*        Colour Schemes         */
+/* ============================= */
+
+//@import '/colour_schemes/green_blue';
+
+/* ============================= */
 /*          Dark Mode            */
 /* ============================= */
 
