--- a/src/Resources/public/scss/contao/content-slider.scss
+++ b/src/Resources/public/scss/contao/content-slider.scss
@@ -11,7 +11,7 @@
   .content-slider {
     max-width: 520px;
     margin: 0 auto;
-    padding-top: 50px;
+    padding-bottom: 70px;
   }
 
   p {
@@ -25,7 +25,8 @@
 
     .slider-menu {
       font-size: 40px;
-      top: inherit;
+      top: 100%;
+      margin-top: -60px;
 
       b {
         color: $body-font-color;
