add dark colour scheme

--- a/src/Resources/public/scss/_custom_variables.scss
+++ b/src/Resources/public/scss/_custom_variables.scss
@@ -12,6 +12,7 @@
 /*        Colour Schemes         */
 /* ============================= */
 
+//@import '/colour_schemes/dark';
 //@import '/colour_schemes/green_blue';
 
 /* ============================= */
@@ -46,3 +47,6 @@
 //$button-color: $light-color;
 //$button-background-hover: $primary-color-dark;
 //$button-color-hover: $button-color;
+
+//$boxes-background: $light-color;
+//$boxes-color: #A6A6A6;
