update css file path for maintenance mode

--- a/src/Resources/ContaoCoreBundle/views/Error/layout.html.twig
+++ b/src/Resources/ContaoCoreBundle/views/Error/layout.html.twig
@@ -71,6 +71,8 @@
             </style>
         {% endblock %}
 
+        <link rel="stylesheet" href="{{ asset('files/convert/css/maintenance_mode.css') }}">
+
     {% endblock %}
 </head>
 <body>
