add variables to custom_variables

--- a/src/Resources/public/scss/_custom_variables.scss
+++ b/src/Resources/public/scss/_custom_variables.scss
@@ -50,3 +50,8 @@
 
 //$boxes-background: $light-color;
 //$boxes-color: #A6A6A6;
+
+/* Control colors */
+//$success-color: #32b643;
+//$warning-color: #ffb700;
+//$error-color: #e85600;
