fix hover color for slider arrows in blue-green colour scheme

--- a/src/Resources/public/scss/contao/content-slider.scss
+++ b/src/Resources/public/scss/contao/content-slider.scss
@@ -60,7 +60,7 @@
 
       &:hover:before {
         color: $primary-color;
-        border-color: $primary-color-dark;
+        border-color: $primary-color;
       }
     }
 
