add some changes to support contao 5

--- a/contao/files/convert/scss/_custom_variables.scss
+++ b/contao/files/convert/scss/_custom_variables.scss
@@ -3,9 +3,6 @@
  ****
  */
 
-// Die folgende Zeile nicht entfernen oder auskommentieren!
-$scssPath: "../../../vendor/contao-themes-net/convert-theme-bundle/src/Resources/public/scss";
-
 /*
  * Entfernen Sie die Schrägstriche um die Theme-Farben zu überschreiben.
  * Uncomment lines to override theme colors.
@@ -15,14 +12,14 @@ $scssPath: "../../../vendor/contao-themes-net/convert-theme-bundle/src/Resources
 /*        Colour Schemes         */
 /* ============================= */
 
-//@import '#{$scssPath}/colour_schemes/dark';
-//@import '#{$scssPath}/colour_schemes/green_blue';
+//@import 'colour_schemes/dark';
+//@import 'colour_schemes/green_blue';
 
 /* ============================= */
 /*          Dark Mode            */
 /* ============================= */
 
-@import '#{$scssPath}/colour_schemes/dark_mode';
+@import 'colour_schemes/dark_mode';
 
 /* ============================= */
 /*    CONVERT Theme Variables    */
