--- a/public/scss/contao/gallery.scss
+++ b/public/scss/contao/gallery.scss
@@ -15,6 +15,7 @@
 
   li {
     justify-content: center;
+    padding: 30px;
 
     &:before {
       display: none;
@@ -26,8 +27,8 @@
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    margin-left: -10px;
-    margin-right: -10px;
+    margin-left: -30px;
+    margin-right: -30px;
   }
 
   @media (max-width: $size-sm) {
