Fix mobile CSS issues

--- a/public/scss/_convert.scss
+++ b/public/scss/_convert.scss
@@ -446,6 +446,7 @@ ul {
       min-height: 100vh;
       max-width: inherit;
       min-width: 100vw;
+      object-fit: cover;
     }
 
     .image_container {
